feature: Firebase database integration

--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,14 @@ GOOGLE_SECRET=oauthclientsecret
 WYlnBdIuMhRruB3
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=ThisisasupersecretAuth
+
+
+
+NEXT_PUBLIC_FIREBASE_apiKey=
+NEXT_PUBLIC_FIREBASE_authDomain=
+NEXT_PUBLIC_FIREBASE_databaseURL=
+NEXT_PUBLIC_FIREBASE_projectId=
+NEXT_PUBLIC_FIREBASE_storageBucket=
+NEXT_PUBLIC_FIREBASE_messagingSenderId=
+NEXT_PUBLIC_FIREBASE_appId=
+NEXT_PUBLIC_FIREBASE_measurementId=
