feature: open ai integration

--- a/.env.sample
+++ b/.env.sample
@@ -3,6 +3,7 @@ GOOGLE_SECRET=oauthclientsecret
 WYlnBdIuMhRruB3
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=ThisisasupersecretAuth
+OPENAI_API_KEY=openapi_key_here
 
 
 
@@ -14,3 +15,5 @@ NEXT_PUBLIC_FIREBASE_storageBucket=
 NEXT_PUBLIC_FIREBASE_messagingSenderId=
 NEXT_PUBLIC_FIREBASE_appId=
 NEXT_PUBLIC_FIREBASE_measurementId=
+
+FIREBASE_SERVICE_ACCOUNT_KEY=a_json_object_which_needs_to_be_made_in_one_line_after_removing_linebreak
